# lexen

./: .gitattributes  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASHEET.md  LICENSE  LICENSE-CODE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: verify.yml
coarsenings/: README.md
coarsenings/csi/: description.md  details.json
coarsenings/csi/files/: csi_report_aliases.json  mapping_coverage.json  wordnet_sense_key_to_csi_concept.jsonl
data/lexen-v1/: dataset.json  reviews.jsonl
docs/: labeling-process.md  provenance.md  reports.md  review-protocol.md  schema.md  selection.md
exports/raganato/lexen-v1/: lexen-v1.data.xml  lexen-v1.gold.key.txt  lexen-v1.removed.json
reports/rf-pw-ph-2026-06-13/: lexicographer_agreement_2026_06_13.html  lexicographer_agreement_2026_06_13.md  metrics.json  per_item_agreement.jsonl
reports/rf-pw-ph-2026-06-13/scripts/: build_report.py  chart_agreement_levels.py  chart_cannot_answer.py  chart_gold_support.py  chart_pairwise_coefficients.py  chart_pos_source.py  chart_verdict_shape.py
scripts/: apply_csi.py  build_agreement_report.py  build_public_glite_subset.py  build_release.py  build_selection_source.py  build_source_manifest.py  fetch_upstream_sources.py  sanitize_model_panel_predictions.py  verify_release.py
sources/: manifest.json
sources/glite-coarsening/: description.md  details.json
sources/glite-coarsening/files/: lexen_report_aliases.json  mapping_coverage.json  wordnet_sense_key_to_glite_concept.jsonl
sources/maru2022/original/: description.md  details.json
sources/maru2022/papers/: description.md  details.json
sources/model-panel/: description.md  details.json
sources/raganato/original/: description.md  details.json
sources/reviews/ph-2026-06-13/: description.md  details.json  maru2022-wsd-verdicts-2026-06-13.json
sources/reviews/pw-2026-05-29/: description.md  details.json  maru2022-wsd-verdicts-2026-05-29.json
sources/reviews/rf-2026-05-26/: description.md  details.json  maru2022-wsd-verdicts-2026-05-26.json  reviewer_brief.md
sources/selection/: description.md  details.json  schema.json  waterfall_summary.json
src/lexen/: __init__.py  glite.py  io.py  models.py  paths.py  release.py  selection.py  source_manifest.py  verify.py
src/lexen/agreement_report/: __init__.py  build.py  charts.py  data.py  formatting.py  metrics.py  models.py  paths.py  render_html.py  render_markdown.py  render_pdf.py  report_content.py  (+1 more)
tests/: test_agreement_report.py  test_build_and_verify.py  test_public_sanitization.py  test_release_policy.py
(+3 files in other folders)
