[project]
name = "lexen"
version = "0.3.0"
description = "Build, verification, and release artifacts for the lexEN WSD benchmark"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "LICENSE-CODE"]
requires-python = ">=3.12"
authors = [
    { name = "Glite Tech Ltd", email = "info@glite.ai" },
]
maintainers = [
    { name = "Vassili Philippov", email = "vassili@glite.ai" },
]
keywords = [
    "benchmark",
    "evaluation",
    "lexen",
    "maru2022",
    "nlp",
    "word-sense-disambiguation",
    "wsd",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "matplotlib>=3.9",
    "pydantic>=2.0",
    "reportlab>=4.2",
]

[project.urls]
Homepage = "https://github.com/GliteTech/lexen"
Repository = "https://github.com/GliteTech/lexen"
Review = "https://marureview.com/"
Company = "https://glite.ai"

[project.scripts]
lexen-build-agreement-report = "lexen.agreement_report.build:main"
lexen-build-release = "lexen.release:main"
lexen-build-selection-source = "lexen.selection:main"
lexen-build-source-manifest = "lexen.source_manifest:main"
lexen-verify-release = "lexen.verify:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lexen"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/data",
    "/exports",
    "/reports",
    "/sources",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "reportlab.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = "test_*.py"
python_functions = "test_*"

[tool.flowmark]
width = 100

[dependency-groups]
dev = [
    "flowmark>=0.6.5",
    "mypy>=1.13",
    "pytest>=8.0",
    "ruff>=0.8",
]
